fixed footer, changed image sizing to contain, changed button coloring for improved contrast, changed reader styling, added navbar scripts to all pages

--- a/public/styles/components/_carousel.scss
+++ b/public/styles/components/_carousel.scss
@@ -3,23 +3,21 @@ div.carousel {
   height: 80vh;
   overflow: hidden;
   background-color: $light-background;
-
   i.arrow {
     position: absolute;
     top: 50%;
     bottom: auto;
     font-size: 2rem;
     color: $transparent-dark;
+    cursor: pointer;
     &:hover {
       color: $transparent-darker;
     }
     &.leftArrow {
       left: 1vw;
-      right: auto;
     }
     &.rightArrow {
       right: 1vw;
-      left: auto;
     }
   }
 
@@ -34,7 +32,7 @@ div.carousel {
       transition: opacity 0.75s;
       //box-shadow: 50px 0 45px -4px $dark-background,
       //-50px 0 45px -4px $dark-background;
-      object-fit: cover;
+      object-fit: contain;
 
       &.activeImg {
         opacity: 1;
@@ -55,10 +53,10 @@ div.carousel {
       flex-grow: 0.5;
       margin: 0 0.25rem;
       height: 3vh;
-      background-color: $transparent-dark;
+      background-color: $btn-light;
       transition: background-color 1s;
       &.activeBtn {
-        background-color: $transparent-darker;
+        background-color: $btn-dark;
       }
     }
   }
