--- a/public/styles/components/_footer.scss
+++ b/public/styles/components/_footer.scss
@@ -59,18 +59,25 @@ footer {
 			}
 		}
 		.socials {
-			margin-top: 30px;
+			margin-top: 1.5rem;
 			ul {
+				height: 0;
 				padding: 0;
 				display: flex;
 				list-style: none;
 				font-size: 200%;
 				margin: 0;
-				justify-content: space-evenly;
+				margin-bottom: 2.3rem;
+				justify-content: center;
 				li {
 					display: flex;
 					justify-content: center;
-					width: 0;	
+					margin: 1rem;
+					margin: {
+						top: 0;
+						bottom: 0;
+					}
+					width: 0;
 					padding-inline: 1rem;
 					a {
 						color: $font-light;
